Models for refactor Prime and Deprime in ACM
Refactor Ac Definition to store Prime and Deprime status
and refactor CommissioningController to show the status
of the AC Definition and of all elements.

Issue-ID: POLICY-4502
